# phi3-rs

./: Cargo.toml  README.md
phi3-bin/: Cargo.toml  bin.rs
phi3-cli/: Cargo.toml  bin.rs
phi3-core/: Cargo.toml  lib.rs
phi3-lib/: Cargo.toml  lib.rs
src/: bin.rs  lib.rs
