[package]
name = "phi3-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "phi3"
path = "lib.rs"

[dependencies]
candle-core.workspace = true
thiserror = "1"
candle-transformers = "0.6"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.20"

[features]
cuda = ["candle-core/cuda", "candle-transformers/cuda"]
